zno-macro-draft/tests/zno/ui/err/009-optional-is-known-str.rs
use zno::zno;

#[zno(name = "a", "enter_on_poll" = true)]
fn f() {}

fn main() {
    f();
}
